# OS_2PD

./: .gitignore  CMakeLists.txt  dll_setup.iss  installer_script.iss  program_setup.iss
DLL/: CMakeLists.txt  OS_2PD_dll.cpp  OS_2PD_dll.h  main.cpp  main.hpp  my_dll_api.cpp  my_dll_api.h
Program/: main.cpp
Program/manifest/: admin.manifest  admin.rc  admin.res
